--- a/kontak.html
+++ b/kontak.html
@@ -13,31 +13,38 @@
   <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
 
   <div class="navbar">
-    <img src="/logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo">
 
-    <nav class="nav-links">
-      <a href="/index.html">Beranda</a>
-      <a href="/profil.html">Profil</a>
-      <a href="/layanan.html">Layanan</a>
-      <a href="/karir.html">Karir</a>
-      <a href="/kontak.html" class="active">Kontak</a>
+    <nav>
+      <ul>
+        <li><a href="/">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan">Layanan</a></li>
+        <li><a href="/karir">Karir</a></li>
+        <li><a href="/kontak" class="active">Kontak</a></li>
+      </ul>
     </nav>
 
-    <div class="hamburger">
-      <span></span><span></span><span></span>
-    </div>
+    <div id="menuIcon">☰</div>
+  </div>
+
+  <div id="mobileMenu">
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak" class="active">Kontak</a>
   </div>
 </header>
 
-
-<section class="page-section">
+<section style="padding-top:160px;">
   <h1>Hubungi Kami</h1>
+
   <p>
-    Tim Assistenku siap membantu Anda terkait pemesanan layanan, konsultasi kebutuhan,
-    atau informasi lowongan kerja.
+    Tim Assistenku siap membantu Anda dengan cepat dan profesional.
+    Silakan hubungi kami melalui salah satu saluran berikut:
   </p>
 </section>
-
 
 <section>
   <h2>Informasi Kontak</h2>
@@ -45,27 +52,27 @@
   <div class="card-grid">
 
     <div class="card">
-      <h3>WhatsApp Resmi</h3>
-      <p>Respons cepat untuk semua kebutuhan.</p>
-      <a class="btn-primary" href="https://wa.me/628986570020" target="_blank">
-        Hubungi via WhatsApp
-      </a>
+      <h3>WhatsApp</h3>
+      <p>Respon cepat, 08.00–21.00 WIB</p>
+      <a class="btn-primary"
+         href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20bertanya."
+         target="_blank">Chat via WhatsApp</a>
     </div>
 
     <div class="card">
-      <h3>Email Layanan</h3>
-      <p>Untuk pertanyaan seputar pemesanan layanan.</p>
-      <a class="btn-primary" href="mailto:kontakassistenku@gmail.com">
-        Email Layanan
-      </a>
+      <h3>Email</h3>
+      <p>Untuk dokumen & kebutuhan resmi.</p>
+      <a class="btn-primary"
+         href="mailto:kontakassistenku@gmail.com"
+         target="_blank">Kirim Email</a>
     </div>
 
     <div class="card">
-      <h3>Email Rekrutmen</h3>
-      <p>Untuk informasi lowongan kerja & lamaran.</p>
-      <a class="btn-primary" href="mailto:karirassistenku@gmail.com">
-        Email Rekrutmen
-      </a>
+      <h3>Alamat</h3>
+      <p>
+        Pekanbaru, Riau <br>
+        (Kantor operasional tanpa kunjungan langsung)
+      </p>
     </div>
 
   </div>
