--- a/kontak.html
+++ b/kontak.html
@@ -41,38 +41,49 @@
   <h1>Hubungi Kami</h1>
 
   <p>
-    Tim Assistenku siap membantu Anda dengan cepat dan profesional.
-    Silakan hubungi kami melalui salah satu saluran berikut:
+    Kami memahami bahwa setiap kebutuhan asistensi—baik untuk rumah, keluarga, maupun bisnis—
+    membutuhkan respons yang cepat dan dapat dipercaya.  
+    Karena itu, tim Assistenku selalu siap membantu Anda memberikan informasi, menjawab pertanyaan,
+    ataupun memberikan rekomendasi layanan yang paling sesuai untuk Anda.
+  </p>
+
+  <p>
+    Jika Anda membutuhkan penjelasan lebih detail, ingin berkonsultasi sebelum memilih layanan,
+    atau ingin mengetahui peluang lowongan kerja terbaru, kami menyediakan akses komunikasi yang mudah
+    dan responsif melalui WhatsApp serta email.
   </p>
 </section>
 
 <section>
-  <h2>Informasi Kontak</h2>
+  <h2>Saluran Kontak Resmi</h2>
 
   <div class="card-grid">
 
+    <!-- WhatsApp Layanan -->
     <div class="card">
-      <h3>WhatsApp</h3>
-      <p>Respon cepat, 08.00–21.00 WIB</p>
+      <h3>Informasi Layanan</h3>
+      <p>Dapatkan penjelasan lengkap mengenai layanan yang tersedia.</p>
       <a class="btn-primary"
-         href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20bertanya."
-         target="_blank">Chat via WhatsApp</a>
+         href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20mengetahui%20informasi%20layanan."
+         target="_blank">Chat WhatsApp Layanan</a>
+
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Informasi%20Layanan%20Assistenku"
+         target="_blank">Kirim Email Layanan</a>
     </div>
 
+    <!-- WhatsApp Lowongan -->
     <div class="card">
-      <h3>Email</h3>
-      <p>Untuk dokumen & kebutuhan resmi.</p>
-      <a class="btn-primary"
-         href="mailto:kontakassistenku@gmail.com"
-         target="_blank">Kirim Email</a>
-    </div>
+      <h3>Informasi Lowongan Kerja</h3>
+      <p>Tanyakan posisi yang tersedia dan proses pendaftarannya.</p>
 
-    <div class="card">
-      <h3>Alamat</h3>
-      <p>
-        Pekanbaru, Riau <br>
-        (Kantor operasional tanpa kunjungan langsung)
-      </p>
+      <a class="btn-primary"
+         href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20mengetahui%20informasi%20lowongan%20kerja."
+         target="_blank">Chat WhatsApp Karir</a>
+
+      <a class="btn-secondary"
+         href="mailto:karirassistenku@gmail.com?subject=Informasi%20Lowongan%20Kerja%20Assistenku"
+         target="_blank">Kirim Email Karir</a>
     </div>
 
   </div>
