--- a/karir.html
+++ b/karir.html
@@ -57,6 +57,9 @@
 
   <div class="card-grid">
 
+    <!-- ===========================
+          ART
+    ============================ -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
       <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
@@ -77,10 +80,20 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20ART">Lamar via WhatsApp</a>
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20ART">
+           Lamar via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
+           Lamar via Email
+        </a>
       </div>
     </div>
 
+    <!-- ===========================
+          Lansia
+    ============================ -->
     <div class="card">
       <h3>Pendamping Lansia</h3>
       <p>Mendampingi lansia dengan perhatian dan empati.</p>
@@ -101,10 +114,20 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">Lamar via WhatsApp</a>
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
+           Lamar via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
+           Lamar via Email
+        </a>
       </div>
     </div>
 
+    <!-- ===========================
+          Pengemudi
+    ============================ -->
     <div class="card">
       <h3>Pengemudi Pribadi</h3>
       <p>Mengemudi dengan aman, sopan, dan profesional.</p>
@@ -124,10 +147,20 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Driver">Lamar via WhatsApp</a>
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Driver">
+           Lamar via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pengemudi%20Pribadi">
+           Lamar via Email
+        </a>
       </div>
     </div>
 
+    <!-- ===========================
+          Penjaga Toko
+    ============================ -->
     <div class="card">
       <h3>Penjaga Toko</h3>
       <p>Melayani pembeli dan menjaga kebersihan area toko.</p>
@@ -147,7 +180,14 @@
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">Lamar via WhatsApp</a>
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">
+           Lamar via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Penjaga%20Toko">
+           Lamar via Email
+        </a>
       </div>
     </div>
 
