--- a/layanan.html
+++ b/layanan.html
@@ -37,25 +37,16 @@
   </div>
 </header>
 
-
-<!-- =============================
-     PAGE SECTION
-============================= -->
 <section class="page-section" style="padding-top:160px;">
   <h1>Layanan Kami</h1>
 
   <p>
     Assistenku menyediakan berbagai layanan asistensi yang dirancang untuk mempermudah kehidupan
-    keluarga, individu, hingga kebutuhan operasional bisnis. Seluruh layanan disusun dengan standar
-    tinggi, proses seleksi ketat, serta pelatihan terstruktur demi memastikan kenyamanan dan
-    keamanan klien.
+    keluarga, individu, hingga kebutuhan operasional bisnis. Semua layanan dibangun dengan standar
+    tinggi, seleksi ketat, dan pelatihan terstruktur untuk menjamin kenyamanan serta keamanan klien.
   </p>
 </section>
 
-
-<!-- =============================
-     DAFTAR LAYANAN
-============================= -->
 <section>
   <h2>Daftar Layanan</h2>
 
@@ -71,10 +62,18 @@
         <li>Memasak dasar</li>
         <li>Manajemen rumah tangga</li>
       </ul>
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART.">
-         Pesan Sekarang
-      </a>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART.">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20ART">
+           Email Layanan ART
+        </a>
+      </div>
     </div>
 
     <!-- Baby Sitter -->
@@ -87,10 +86,18 @@
         <li>Pengawasan makan & tidur</li>
         <li>Kebersihan area bayi</li>
       </ul>
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628986570020?text=Saya%20ingin%20menanyakan%20layanan%20Baby%20Sitter.">
-         Pesan Sekarang
-      </a>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Saya%20ingin%20menanyakan%20layanan%20Baby%20Sitter.">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Baby%20Sitter">
+           Email Layanan Baby Sitter
+        </a>
+      </div>
     </div>
 
     <!-- Pendamping Lansia -->
@@ -103,10 +110,18 @@
         <li>Pendamping berjalan</li>
         <li>Dukungan emosional & sosial</li>
       </ul>
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628986570020?text=Halo,%20Saya%20ingin%20menanyakan%20Pendamping%20Lansia.">
-         Pesan Sekarang
-      </a>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Halo,%20Saya%20ingin%20menanyakan%20Pendamping%20Lansia.">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pendamping%20Lansia">
+           Email Layanan Lansia
+        </a>
+      </div>
     </div>
 
     <!-- Office Boy -->
@@ -119,10 +134,18 @@
         <li>Pengepel & pengelapan</li>
         <li>Bantuan operasional ringan</li>
       </ul>
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628986570020?text=Halo,%20Saya%20ingin%20menanyakan%20layanan%20Office%20Boy.">
-         Pesan Sekarang
-      </a>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Halo,%20Saya%20ingin%20menanyakan%20layanan%20Office%20Boy.">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Office%20Boy">
+           Email Layanan OB/OG
+        </a>
+      </div>
     </div>
 
     <!-- Driver -->
@@ -135,35 +158,33 @@
         <li>Perjalanan dinas</li>
         <li>Mengemudi aman & defensif</li>
       </ul>
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628986570020?text=Halo,%20saya%20ingin%20menanyakan%20layanan%20Driver.">
-         Pesan Sekarang
-      </a>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Halo,%20saya%20ingin%20menanyakan%20layanan%20Driver.">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Driver">
+           Email Layanan Driver
+        </a>
+      </div>
     </div>
 
   </div>
 </section>
 
-
-<!-- =============================
-     CATATAN KEBIJAKAN
-============================= -->
 <section>
   <h2>Catatan & Kebijakan</h2>
 
-  <p>
-    Semua tenaga kerja melalui proses seleksi, wawancara, pengecekan latar belakang,
-    dan pelatihan dasar sebelum ditempatkan.
-  </p>
+  <p>Semua tenaga kerja melalui proses seleksi, wawancara, pengecekan latar belakang, dan pelatihan dasar sebelum ditempatkan.</p>
 
-  <p>
-    Jadwal kerja, kontrak, serta detail pekerjaan dapat disesuaikan dengan kebutuhan klien.
-  </p>
+  <p>Jadwal kerja, kontrak, serta detail pekerjaan dapat disesuaikan dengan kebutuhan klien.</p>
 </section>
-
 
 <footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
 </body>
-</html>
+          </html>
