--- a/layanan.html
+++ b/layanan.html
@@ -41,9 +41,9 @@
   <h1>Layanan Kami</h1>
 
   <p>
-    Assistenku menyediakan berbagai layanan asistensi yang dirancang untuk mempermudah kehidupan
-    keluarga, individu, hingga kebutuhan operasional bisnis. Semua layanan dibangun dengan standar
-    tinggi, seleksi ketat, dan pelatihan terstruktur untuk menjamin kenyamanan serta keamanan klien.
+    Assistenku menyediakan layanan asistensi profesional untuk rumah tangga,
+    individu, hingga kebutuhan operasional bisnis. Semua tenaga telah melalui
+    proses seleksi, wawancara, dan pelatihan dasar.
   </p>
 </section>
 
@@ -55,7 +55,7 @@
     <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu pekerjaan rumah harian dengan standar profesional.</p>
+      <p>Membantu pekerjaan rumah dengan standar profesional.</p>
       <ul>
         <li>Pembersihan rumah</li>
         <li>Mencuci & menyetrika</li>
@@ -66,9 +66,8 @@
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART.">
-           Chat via WhatsApp
+          Chat via WhatsApp
         </a>
-
         <a class="btn-secondary" target="_blank"
            href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20ART">
            Email Layanan ART
@@ -90,12 +89,11 @@
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Saya%20ingin%20menanyakan%20layanan%20Baby%20Sitter.">
-           Chat via WhatsApp
+          Chat via WhatsApp
         </a>
-
         <a class="btn-secondary" target="_blank"
            href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Baby%20Sitter">
-           Email Layanan Baby Sitter
+          Email Layanan Baby Sitter
         </a>
       </div>
     </div>
@@ -103,7 +101,7 @@
     <!-- Pendamping Lansia -->
     <div class="card">
       <h3>Pendamping Lansia</h3>
-      <p>Mendampingi dan membantu lansia dengan empati dan kesabaran.</p>
+      <p>Mendampingi lansia dengan empati dan kesabaran.</p>
       <ul>
         <li>Pendamping harian</li>
         <li>Aktivitas ringan</li>
@@ -114,12 +112,11 @@
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Halo,%20Saya%20ingin%20menanyakan%20Pendamping%20Lansia.">
-           Chat via WhatsApp
+          Chat via WhatsApp
         </a>
-
         <a class="btn-secondary" target="_blank"
            href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pendamping%20Lansia">
-           Email Layanan Lansia
+          Email Layanan Lansia
         </a>
       </div>
     </div>
@@ -131,19 +128,18 @@
       <ul>
         <li>Membersihkan area kantor</li>
         <li>Penyajian minuman</li>
-        <li>Pengepel & pengelapan</li>
+        <li>Pengepel</li>
         <li>Bantuan operasional ringan</li>
       </ul>
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Halo,%20Saya%20ingin%20menanyakan%20layanan%20Office%20Boy.">
-           Chat via WhatsApp
+          Chat via WhatsApp
         </a>
-
         <a class="btn-secondary" target="_blank"
            href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Office%20Boy">
-           Email Layanan OB/OG
+          Email Layanan OB/OG
         </a>
       </div>
     </div>
@@ -151,9 +147,9 @@
     <!-- Driver -->
     <div class="card">
       <h3>Pengemudi Pribadi</h3>
-      <p>Pengemudi profesional yang mengutamakan keamanan.</p>
+      <p>Pengemudi profesional dengan standar keamanan tinggi.</p>
       <ul>
-        <li>Pengemudi keluarga</li>
+        <li>Driver keluarga</li>
         <li>Driver harian</li>
         <li>Perjalanan dinas</li>
         <li>Mengemudi aman & defensif</li>
@@ -162,12 +158,47 @@
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Halo,%20saya%20ingin%20menanyakan%20layanan%20Driver.">
-           Chat via WhatsApp
+          Chat via WhatsApp
         </a>
-
         <a class="btn-secondary" target="_blank"
            href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Driver">
-           Email Layanan Driver
+          Email Layanan Driver
+        </a>
+      </div>
+    </div>
+
+    <!-- ============================== -->
+    <!--   LAYANAN BARU: WEBSITE        -->
+    <!-- ============================== -->
+
+    <div class="card">
+      <h3>Pembuatan Website & Sistem</h3>
+      <p>Layanan pembuatan website cepat, responsif, modern, dan siap dipakai untuk bisnis.</p>
+
+      <ul>
+        <li>Pembuatan Landing Page</li>
+        <li>Pembuatan Website Profil Perusahaan</li>
+        <li>Pembuatan Sistem (Admin Panel / HR / Mitra)</li>
+        <li>Optimasi kecepatan & SEO dasar</li>
+      </ul>
+
+      <h4 style="margin-top:10px;">Kelas Pembuatan Website</h4>
+      <ul>
+        <li><b>Kelas 1 — Basic</b> (1–2 juta)</li>
+        <li><b>Kelas 2 — Premium</b> (3–7 juta)</li>
+        <li><b>Kelas 3 — Profesional</b> (10–20 juta)</li>
+        <li><b>Kelas 4 — Bisnis</b> (30–70 juta)</li>
+        <li><b>Kelas 5 — Enterprise</b> (100–200 juta)</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Halo,%20saya%20ingin%20membuat%20website%20bersama%20Assistenku.">
+          Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" href="/hargawebsite.html">
+          Lihat Biaya Pembuatan Website
         </a>
       </div>
     </div>
@@ -178,13 +209,18 @@
 <section>
   <h2>Catatan & Kebijakan</h2>
 
-  <p>Semua tenaga kerja melalui proses seleksi, wawancara, pengecekan latar belakang, dan pelatihan dasar sebelum ditempatkan.</p>
+  <p>
+    Semua tenaga kerja melalui proses seleksi, pengecekan latar belakang, dan pelatihan dasar sebelum ditempatkan.
+  </p>
 
-  <p>Jadwal kerja, kontrak, serta detail pekerjaan dapat disesuaikan dengan kebutuhan klien.</p>
+  <p>
+    Jadwal kerja dan detail layanan dapat disesuaikan dengan kebutuhan klien.
+  </p>
 </section>
 
 <footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
+
 </body>
-          </html>
+</html>
