--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Beranda | Assistenku</title>
+
+  <!-- SCHEMA: ORGANIZATION -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Assistenku",
+    "url": "https://assistenku.com",
+    "logo": "https://assistenku.com/logo.png",
+    "description": "Assistenku adalah layanan asistensi rumah tangga dan bisnis yang menyediakan tenaga kerja profesional, aman, dan terpercaya.",
+    "sameAs": [
+      "https://assistenku.com"
+    ]
+  }
+  </script>
+
   <link rel="stylesheet" href="/styles.css" />
 </head>
 
