--- a/index.html
+++ b/index.html
@@ -13,10 +13,51 @@
     "name": "Assistenku",
     "url": "https://assistenku.com",
     "logo": "https://assistenku.com/logo.png",
-    "description": "Assistenku adalah layanan asistensi rumah tangga dan bisnis yang menyediakan tenaga kerja profesional, aman, dan terpercaya.",
-    "sameAs": [
-      "https://assistenku.com"
-    ]
+    "description": "Assistenku adalah layanan asistensi rumah tangga dan bisnis yang menyediakan tenaga kerja profesional, aman, dan terpercaya."
+  }
+  </script>
+
+  <!-- SCHEMA: WEBSITE -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://assistenku.com",
+    "name": "Assistenku",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://assistenku.com/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- SCHEMA: WEBPAGE (Beranda) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Beranda Assistenku",
+    "url": "https://assistenku.com",
+    "description": "Assistenku menyediakan layanan asistensi rumah tangga dan bisnis dengan tenaga kerja profesional, aman, dan terpercaya.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://assistenku.com"
+    }
+  }
+  </script>
+
+  <!-- SCHEMA: BREADCRUMB -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Beranda",
+      "item": "https://assistenku.com"
+    }]
   }
   </script>
 
