--- a/layanan.html
+++ b/layanan.html
@@ -39,188 +39,238 @@
 
 <section class="page-section" style="padding-top:160px;">
   <h1>Layanan Kami</h1>
-
   <p>
     Assistenku menyediakan layanan asistensi profesional untuk rumah tangga,
-    individu, hingga kebutuhan operasional bisnis. Semua tenaga telah melalui
-    proses seleksi, wawancara, dan pelatihan dasar.
+    individu, hingga operasional bisnis. Semua tenaga melalui proses seleksi,
+    wawancara, dan pelatihan dasar.
   </p>
 </section>
 
-<section>
-  <h2>Daftar Layanan</h2>
+<section id="DaftarLayanan">
 
-  <div class="card-grid">
-
-    <!-- ART -->
-    <div class="card">
-      <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu pekerjaan rumah dengan standar profesional.</p>
-      <ul>
-        <li>Pembersihan rumah</li>
-        <li>Mencuci & menyetrika</li>
-        <li>Memasak dasar</li>
-        <li>Manajemen rumah tangga</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20ART">
-           Email Layanan ART
-        </a>
-      </div>
-    </div>
-
-    <!-- Baby Sitter -->
-    <div class="card">
-      <h3>Baby Sitter</h3>
-      <p>Perawatan bayi & balita dengan penuh perhatian.</p>
-      <ul>
-        <li>Perawatan harian</li>
-        <li>Pendamping aktivitas</li>
-        <li>Pengawasan makan & tidur</li>
-        <li>Kebersihan area bayi</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20menanyakan%20layanan%20Baby%20Sitter.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Baby%20Sitter">
-          Email Layanan Baby Sitter
-        </a>
-      </div>
-    </div>
-
-    <!-- Pendamping Lansia -->
-    <div class="card">
-      <h3>Pendamping Lansia</h3>
-      <p>Mendampingi lansia dengan empati dan kesabaran.</p>
-      <ul>
-        <li>Pendamping harian</li>
-        <li>Aktivitas ringan</li>
-        <li>Pendamping berjalan</li>
-        <li>Dukungan emosional & sosial</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20Saya%20ingin%20menanyakan%20Pendamping%20Lansia.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pendamping%20Lansia">
-          Email Layanan Lansia
-        </a>
-      </div>
-    </div>
-
-    <!-- Office Boy -->
-    <div class="card">
-      <h3>Office Boy / Girl</h3>
-      <p>Tenaga kebersihan & operasional kantor.</p>
-      <ul>
-        <li>Membersihkan area kantor</li>
-        <li>Penyajian minuman</li>
-        <li>Pengepel</li>
-        <li>Bantuan operasional ringan</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20Saya%20ingin%20menanyakan%20layanan%20Office%20Boy.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Office%20Boy">
-          Email Layanan OB/OG
-        </a>
-      </div>
-    </div>
-
-    <!-- Driver -->
-    <div class="card">
-      <h3>Pengemudi Pribadi</h3>
-      <p>Pengemudi profesional dengan standar keamanan tinggi.</p>
-      <ul>
-        <li>Driver keluarga</li>
-        <li>Driver harian</li>
-        <li>Perjalanan dinas</li>
-        <li>Mengemudi aman & defensif</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20layanan%20Driver.">
-          Chat via WhatsApp
-        </a>
-        <a class="btn-secondary" target="_blank"
-           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Driver">
-          Email Layanan Driver
-        </a>
-      </div>
-    </div>
-
-    <!-- ============================== -->
-    <!--   LAYANAN BARU: WEBSITE        -->
-    <!-- ============================== -->
-
-    <div class="card">
-      <h3>Pembuatan Website & Sistem</h3>
-      <p>Layanan pembuatan website cepat, responsif, modern, dan siap dipakai untuk bisnis.</p>
-
-      <ul>
-        <li>Pembuatan Landing Page</li>
-        <li>Pembuatan Website Profil Perusahaan</li>
-        <li>Pembuatan Sistem (Admin Panel / HR / Mitra)</li>
-        <li>Optimasi kecepatan & SEO dasar</li>
-      </ul>
-
-      <h4 style="margin-top:10px;">Kelas Pembuatan Website</h4>
-      <ul>
-        <li><b>Kelas 1 — Basic</b></li>
-        <li><b>Kelas 2 — Premium</b></li>
-        <li><b>Kelas 3 — Profesional</b></li>
-        <li><b>Kelas 4 — Bisnis</b></li>
-        <li><b>Kelas 5 — Enterprise</b></li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20membuat%20website%20bersama%20Assistenku.">
-          Chat via WhatsApp
-        </a>
-
-        <a class="btn-secondary" href="/hargawebsite.html">
-          Lihat Biaya Pembuatan Website
-        </a>
-      </div>
-    </div>
-
+  <!-- 1. Ojek Motor -->
+  <div class="service-card">
+    <h2>Ojek Motor <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Transportasi motor cepat dan fleksibel untuk mobilitas harian Anda.
+    </p>
+    <ul>
+      <li>Pengantaran cepat</li>
+      <li>Aman & profesional</li>
+      <li>Cocok untuk perjalanan mendadak</li>
+      <li>Harga transparan</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Halo%20saya%20ingin%20memesan%20Ojek%20Motor" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Ojek%20Motor" class="email-btn">Email</a>
   </div>
+
+  <!-- 2. Taksi Mobil -->
+  <div class="service-card">
+    <h2>Taksi Mobil <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Solusi transportasi mobil yang nyaman dan aman untuk keluarga dan bisnis.
+    </p>
+    <ul>
+      <li>Mobil bersih & terawat</li>
+      <li>Driver berpengalaman</li>
+      <li>Tersedia untuk jarak jauh</li>
+      <li>Bisa request mobil</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Taksi%20Mobil" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Taksi%20Mobil" class="email-btn">Email</a>
+  </div>
+
+  <!-- 3. Teknisi Rumah & Elektronik -->
+  <div class="service-card">
+    <h2>Teknisi Rumah & Elektronik <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Teknisi profesional untuk perbaikan rumah dan perangkat elektronik.
+    </p>
+    <ul>
+      <li>Perbaikan peralatan listrik</li>
+      <li>Instalasi elektronik</li>
+      <li>Maintenance rutin</li>
+      <li>Teknisi berpengalaman</li>
+    </ul>
+    <a href="https://wa.me/62895363531373?text=Teknisi%20Rumah%20dan%20Elektronik" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Teknisi%20Rumah%20%26%20Elektronik" class="email-btn">Email</a>
+  </div>
+
+  <!-- 4. Service Motor & Mobil Keliling -->
+  <div class="service-card">
+    <h2>Service Motor & Mobil Keliling <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Service panggilan untuk motor dan mobil langsung ke lokasi Anda.
+    </p>
+    <ul>
+      <li>Ganti oli & tune up</li>
+      <li>Cek komponen</li>
+      <li>Datang ke lokasi</li>
+      <li>Untuk motor & mobil</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Service%20Kendaraan" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Service%20Keliling" class="email-btn">Email</a>
+  </div>
+
+  <!-- 5. Asisten Rumah Tangga -->
+  <div class="service-card">
+    <h2>Asisten Rumah Tangga</h2>
+    <p>
+      Tenaga bantuan rumah tangga profesional dan amanah.
+    </p>
+    <ul>
+      <li>Pekerjaan harian rumah</li>
+      <li>Kebersihan, memasak & merapikan</li>
+      <li>Harian atau bulanan</li>
+      <li>Tenaga terlatih</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Asisten%20Rumah%20Tangga" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Asisten%20Rumah%20Tangga" class="email-btn">Email</a>
+  </div>
+
+  <!-- 6. Baby Sitter & Perawat Lansia -->
+  <div class="service-card">
+    <h2>Baby Sitter & Perawat Lansia</h2>
+    <p>
+      Tenaga pendamping bayi dan lansia yang aman & bersertifikat.
+    </p>
+    <ul>
+      <li>Menjaga & merawat</li>
+      <li>Membantu aktivitas harian</li>
+      <li>Pengawasan penuh</li>
+      <li>Bersertifikat</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Baby%20Sitter%20atau%20Lansia" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Baby%20Sitter%20%26%20Lansia" class="email-btn">Email</a>
+  </div>
+
+  <!-- 7. Pijat Panggilan -->
+  <div class="service-card">
+    <h2>Pijat Panggilan <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Terapis pijat profesional datang ke rumah Anda.
+    </p>
+    <ul>
+      <li>Terapis pria & wanita</li>
+      <li>Pijat lengkap</li>
+      <li>Aman & steril</li>
+      <li>Datang ke lokasi</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Pijat%20Panggilan" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Pijat%20Panggilan" class="email-btn">Email</a>
+  </div>
+
+  <!-- 8. Kurir Barang -->
+  <div class="service-card">
+    <h2>Kurir Barang <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Kurir paket dan dokumen cepat & aman.
+    </p>
+    <ul>
+      <li>Pengiriman cepat</li>
+      <li>Pick-up lokasi Anda</li>
+      <li>Tracking sederhana</li>
+      <li>Harga transparan</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Kurir%20Barang" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Kurir%20Barang" class="email-btn">Email</a>
+  </div>
+
+  <!-- 9. Belanja Titipan -->
+  <div class="service-card">
+    <h2>Belanja Titipan / Jastip <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Titip belanja harian & barang tertentu dengan cepat.
+    </p>
+    <ul>
+      <li>Belanja harian</li>
+      <li>Barang tertentu</li>
+      <li>Proses cepat</li>
+      <li>Transparan</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Titip%20Belanja" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Belanja%20Titipan" class="email-btn">Email</a>
+  </div>
+
+  <!-- 10. Cleaning Service -->
+  <div class="service-card">
+    <h2>Cleaning Service</h2>
+    <p>
+      Petugas kebersihan profesional untuk rumah, kost, kantor & event.
+    </p>
+    <ul>
+      <li>Pembersihan menyeluruh</li>
+      <li>Deep cleaning</li>
+      <li>Rapi & ramah</li>
+      <li>Peralatan lengkap</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Cleaning%20Service" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Cleaning%20Service" class="email-btn">Email</a>
+  </div>
+
+  <!-- 11. Tukang Bangunan -->
+  <div class="service-card">
+    <h2>Tukang Bangunan <span class="soon">(Segera Hadir)</span></h2>
+    <p>
+      Layanan tukang bangunan harian & proyek kecil.
+    </p>
+    <ul>
+      <li>Pekerjaan rapi & aman</li>
+      <li>Harian atau borongan</li>
+      <li>Pemasangan & renovasi ringan</li>
+      <li>Tenaga berpengalaman</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Tukang%20Bangunan" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Tukang%20Bangunan" class="email-btn">Email</a>
+  </div>
+
+  <!-- 12. Tenaga Lepas / Asisten Pribadi -->
+  <div class="service-card">
+    <h2>Tenaga Lepas / Asisten Pribadi</h2>
+    <p>
+      Tenaga fleksibel untuk bantuan harian & kebutuhan pribadi.
+    </p>
+    <ul>
+      <li>Membantu aktivitas harian</li>
+      <li>Asisten kerja</li>
+      <li>Fleksibel</li>
+      <li>Amanah</li>
+    </ul>
+    <a href="https://wa.me/628989760020?text=Tenaga%20Lepas%20atau%20Asisten%20Pribadi" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Tenaga%20Lepas" class="email-btn">Email</a>
+  </div>
+
+  <!-- 13. Pembuatan Website -->
+  <div class="service-card">
+    <h2>Pembuatan Website & Sistem</h2>
+    <p>
+      Website modern, cepat, responsif, dan siap dipakai untuk bisnis.
+    </p>
+    <ul>
+      <li>Landing Page</li>
+      <li>Website Profil Perusahaan</li>
+      <li>Sistem Admin / HR / Mitra</li>
+      <li>Optimasi Kecepatan & SEO Dasar</li>
+    </ul>
+
+    <h3 class="sub-title">Kelas Pembuatan Website</h3>
+    <ul>
+      <li><b>Kelas 1 — Basic</b></li>
+      <li><b>Kelas 2 — Premium</b></li>
+      <li><b>Kelas 3 — Profesional</b></li>
+      <li><b>Kelas 4 — Bisnis</b></li>
+      <li><b>Kelas 5 — Enterprise</b></li>
+    </ul>
+
+    <a href="https://wa.me/628989760020?text=Butuh%20Website%20atau%20Sistem" class="wa-btn">WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Pembuatan%20Website" class="email-btn">Email</a>
+  </div>
+
 </section>
 
-<section>
-  <h2>Catatan & Kebijakan</h2>
-
-  <p>
-    Semua tenaga kerja melalui proses seleksi, pengecekan latar belakang, dan pelatihan dasar sebelum ditempatkan.
-  </p>
-
-  <p>
-    Jadwal kerja dan detail layanan dapat disesuaikan dengan kebutuhan klien.
-  </p>
-</section>
-
-<footer>© 2025 Assistenku</footer>
-
-<script src="/script.js"></script>
+<footer>
+  <p>© 2025 Assistenku. Semua Hak Dilindungi.</p>
+</footer>
 
 </body>
 </html>
