--- a/layanan.html
+++ b/layanan.html
@@ -266,6 +266,24 @@
     <a href="mailto:kontakassistenku@gmail.com?subject=Pembuatan%20Website" class="email-btn">Email</a>
   </div>
 
+  <!-- 14. Driver Pribadi -->
+  <div class="service-card">
+    <h2>Driver Pribadi</h2>
+    <p>
+      Layanan pengemudi pribadi profesional untuk keperluan harian, perjalanan kerja, atau kebutuhan khusus. Cocok untuk individu, keluarga, maupun bisnis yang membutuhkan pengemudi amanah, sopan, dan tepat waktu.
+    </p>
+    <ul>
+      <li>Pengemudi berpengalaman & amanah</li>
+      <li>Bisa sistem harian, mingguan, atau bulanan</li>
+      <li>Mengemudi aman, rapi, dan profesional</li>
+      <li>Bisa menggunakan mobil pelanggan atau mobil dari Assistenku*</li>
+    </ul>
+
+    <a href="https://wa.me/628989760020?text=Halo%20saya%20butuh%20Driver%20Pribadi" class="wa-btn">Hubungi via WhatsApp</a>
+    <a href="mailto:kontakassistenku@gmail.com?subject=Layanan%20Assistenku%20-%20Driver%20Pribadi" class="email-btn">Kirim Email</a>
+  </div>
+
+  
 </section>
 
 <footer>
