--- a/karir.html
+++ b/karir.html
@@ -57,9 +57,7 @@
 
   <div class="card-grid">
 
-    <!-- ===========================
-          ART
-    ============================ -->
+    <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
       <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
@@ -91,9 +89,7 @@
       </div>
     </div>
 
-    <!-- ===========================
-          Lansia
-    ============================ -->
+    <!-- Lansia -->
     <div class="card">
       <h3>Pendamping Lansia</h3>
       <p>Mendampingi lansia dengan perhatian dan empati.</p>
@@ -125,9 +121,7 @@
       </div>
     </div>
 
-    <!-- ===========================
-          Pengemudi
-    ============================ -->
+    <!-- Driver -->
     <div class="card">
       <h3>Pengemudi Pribadi</h3>
       <p>Mengemudi dengan aman, sopan, dan profesional.</p>
@@ -158,9 +152,7 @@
       </div>
     </div>
 
-    <!-- ===========================
-          Penjaga Toko
-    ============================ -->
+    <!-- Penjaga Toko -->
     <div class="card">
       <h3>Penjaga Toko</h3>
       <p>Melayani pembeli dan menjaga kebersihan area toko.</p>
@@ -190,7 +182,101 @@
         </a>
       </div>
     </div>
-    
+
+    <!-- =========================================================
+         TAMBAHAN 5 LAYANAN BARU (sesuai instruksi)
+    ========================================================== -->
+
+    <!-- Jasa Umum -->
+    <div class="card">
+      <h3>Layanan Jasa Umum (Segera Hadir)</h3>
+      <p>Pekerjaan umum harian sesuai kebutuhan pelanggan.</p>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Info%20Layanan%20Jasa%20Umum">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Info%20Layanan%20Jasa%20Umum">
+           Email
+        </a>
+      </div>
+    </div>
+
+    <!-- Cleaning Service -->
+    <div class="card">
+      <h3>Cleaning Service</h3>
+      <p>Kebersihan rumah, kantor, kos, dan area lainnya.</p>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Info%20Cleaning%20Service">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Info%20Cleaning%20Service">
+           Email
+        </a>
+      </div>
+    </div>
+
+    <!-- Kirim Barang & Jastip -->
+    <div class="card">
+      <h3>Kirim Barang & Jastip (Segera Hadir)</h3>
+      <p>Layanan pengiriman cepat dan jasa titip.</p>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Info%20Kirim%20Barang%20dan%20Jastip">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Info%20Kirim%20Barang%20dan%20Jastip">
+           Email
+        </a>
+      </div>
+    </div>
+
+    <!-- Service & Perbaikan -->
+    <div class="card">
+      <h3>Service & Perbaikan (Segera Hadir)</h3>
+      <p>Perbaikan ringan rumah & peralatan.</p>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Info%20Service%20dan%20Perbaikan">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Info%20Service%20dan%20Perbaikan">
+           Email
+        </a>
+      </div>
+    </div>
+
+    <!-- Transportasi -->
+    <div class="card">
+      <h3>Transportasi (Segera Hadir)</h3>
+      <p>Layanan transportasi aman, nyaman, dan profesional.</p>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Info%20Transportasi">
+           Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Info%20Transportasi">
+           Email
+        </a>
+      </div>
+    </div>
+
   </div>
 </section>
 
