--- a/karir.html
+++ b/karir.html
@@ -277,6 +277,56 @@
       </div>
     </div>
 
+    <!-- AutoCAD Drafter -->
+<div class="card">
+  <h3>AutoCAD Drafter (Junior – Intermediate – Expert)</h3>
+  <p>
+    Kesempatan bagi Fresh Graduate maupun profesional untuk bergabung
+    melalui proyek nyata dan berkelanjutan bersama Assistenku.
+  </p>
+
+  <strong>Target Kandidat:</strong>
+  <ul>
+    <li>Fresh Graduate yang ingin membangun pengalaman & portofolio</li>
+    <li>Berpengalaman AutoCAD atau software setara</li>
+  </ul>
+
+  <strong>Deskripsi Pekerjaan:</strong>
+  <ul>
+    <li>Membuat dan merapikan gambar kerja teknis</li>
+    <li>Redraw dari sketsa / brief proyek</li>
+    <li>Revisi sesuai arahan klien</li>
+    <li>Menjaga skala & standar gambar</li>
+    <li>Koordinasi dengan tim Assistenku</li>
+  </ul>
+
+  <strong>Kualifikasi:</strong>
+  <ul>
+    <li>Menguasai AutoCAD 2D atau setara</li>
+    <li>Memahami dasar gambar teknik</li>
+    <li>Bertanggung jawab & komunikatif</li>
+    <li>Siap kerja remote</li>
+    <li>Memiliki laptop pribadi</li>
+  </ul>
+
+   <p><i>Fee negotiable sesuai kompleksitas dan performa.</i></p>
+
+  <div class="apply-box">
+    <a class="btn-primary" href="/loker-autocad-drafter.html">
+      Lihat Detail Lowongan
+    </a>
+
+    <a class="btn-secondary" target="_blank"
+       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20AutoCAD%20Drafter">
+      Lamar via WhatsApp
+    </a>
+  <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Info%20Transportasi">
+           Email
+        </a>
+      </div>
+    </div>
+
   </div>
 </section>
 
