--- a/karir.html
+++ b/karir.html
@@ -277,9 +277,18 @@
       </div>
     </div>
 
-    <!-- AutoCAD Drafter -->
+   <!-- AutoCAD Drafter -->
 <div class="card">
+
+  <!-- Gambar Loker -->
+  <img
+    src="/loker-autocad-drafter.png"
+    alt="Lowongan AutoCAD Drafter Assistenku"
+    class="card-image"
+  >
+
   <h3>AutoCAD Drafter (Junior – Intermediate – Expert)</h3>
+
   <p>
     Kesempatan bagi Fresh Graduate maupun profesional untuk bergabung
     melalui proyek nyata dan berkelanjutan bersama Assistenku.
@@ -309,7 +318,7 @@
     <li>Memiliki laptop pribadi</li>
   </ul>
 
-   <p><i>Fee negotiable sesuai kompleksitas dan performa.</i></p>
+  <p><i>Fee negotiable sesuai kompleksitas dan performa.</i></p>
 
   <div class="apply-box">
     <a class="btn-primary" href="/loker-autocad-drafter.html">
@@ -320,12 +329,15 @@
        href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20AutoCAD%20Drafter">
       Lamar via WhatsApp
     </a>
-  <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Info%20Transportasi">
-           Email
-        </a>
-      </div>
-    </div>
+
+    <a class="btn-secondary" target="_blank"
+       href="mailto:karirassistenku@gmail.com?subject=AutoCAD%20Drafter%20-%20Nama">
+      Lamar via Email
+    </a>
+  </div>
+
+</div>
+
 
   </div>
 </section>
