--- a/karir.html
+++ b/karir.html
@@ -58,36 +58,7 @@
   <div class="card-grid">
 
     <!-- ART -->
-    <div class="card">
-      <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
-
-      <strong>Tugas:</strong>
-      <ul>
-        <li>Pembersihan rumah</li>
-        <li>Mencuci & menyetrika</li>
-        <li>Memasak dasar</li>
-      </ul>
-
-      <strong>Syarat:</strong>
-      <ul>
-        <li>Usia 18–50 tahun</li>
-        <li>Jujur & bertanggung jawab</li>
-        <li>Sehat jasmani</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20ART">
-           Lamar via WhatsApp
-        </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
-           Lamar via Email
-        </a>
-      </div>
-    </div>
+    
 
     <!-- Lansia -->
     <div class="card">
@@ -102,7 +73,41 @@
       </ul>
 
       <strong>Syarat:</strong>
-      <ul>
+      <ul<!-- ART -->
+<div class="card">
+  <h3>Asisten Rumah Tangga (ART)</h3>
+  <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
+
+  <strong>Tugas:</strong>
+  <ul>
+    <li>Pembersihan rumah</li>
+    <li>Mencuci & menyetrika</li>
+    <li>Memasak dasar</li>
+  </ul>
+
+  <strong>Syarat:</strong>
+  <ul>
+    <li>Usia 18–50 tahun</li>
+    <li>Jujur & bertanggung jawab</li>
+    <li>Sehat jasmani</li>
+  </ul>
+
+  <div class="apply-box">
+    <a class="btn-primary" target="_blank"
+       href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20ART">
+       Lamar via WhatsApp
+    </a>
+
+    <a class="btn-secondary" target="_blank"
+       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
+       Lamar via Email
+    </a>
+
+    <a class="btn-outline" href="loker-art.html">
+      Lihat Detail Lowongan
+    </a>
+  </div>
+</div>>
         <li>Usia 20–45 tahun</li>
         <li>Sabar, sopan, dan telaten</li>
         <li>Sehat jasmani</li>
