--- a/karir.html
+++ b/karir.html
@@ -55,75 +55,77 @@
 <section>
   <h2>Lowongan Tersedia</h2>
 
-  <!-- ART -->
-<div class="card">
-  <h3>Asisten Rumah Tangga (ART)</h3>
-  <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
+  <div class="card-grid">
 
-  <strong>Tugas:</strong>
-  <ul>
-    <li>Pembersihan rumah</li>
-    <li>Mencuci & menyetrika</li>
-    <li>Memasak dasar</li>
-  </ul>
+    <!-- ART -->
+    <div class="card">
+      <h3>Asisten Rumah Tangga (ART)</h3>
+      <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
 
-  <strong>Syarat:</strong>
-  <ul>
-    <li>Usia 18–50 tahun</li>
-    <li>Jujur & bertanggung jawab</li>
-    <li>Sehat jasmani</li>
-  </ul>
+      <strong>Tugas:</strong>
+      <ul>
+        <li>Pembersihan rumah</li>
+        <li>Mencuci & menyetrika</li>
+        <li>Memasak dasar</li>
+      </ul>
 
-  <div class="apply-box">
-    <a class="btn-primary" target="_blank"
-       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
-       Lamar via WhatsApp
-    </a>
+      <strong>Syarat:</strong>
+      <ul>
+        <li>Usia 18–50 tahun</li>
+        <li>Jujur & bertanggung jawab</li>
+        <li>Sehat jasmani</li>
+      </ul>
 
-    <a class="btn-secondary" target="_blank"
-       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
-       Lamar via Email
-    </a>
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
+          Lamar via WhatsApp
+        </a>
 
-    <a class="btn-outline" href="loker-art.html">
-      Lihat Detail Lowongan
-    </a>
-  </div>
-</div>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
+          Lamar via Email
+        </a>
 
-<!-- Pendamping Lansia -->
-<div class="card">
-  <h3>Pendamping Lansia</h3>
-  <p>Mendampingi lansia dengan perhatian dan empati.</p>
+        <a class="btn-outline" href="loker-art.html">
+          Lihat Detail Lowongan
+        </a>
+      </div>
+    </div>
 
-  <strong>Tugas:</strong>
-  <ul>
-    <li>Pendamping aktivitas harian</li>
-    <li>Membantu kebutuhan dasar lansia</li>
-    <li>Menjadi teman bicara</li>
-  </ul>
+    <!-- Pendamping Lansia -->
+    <div class="card">
+      <h3>Pendamping Lansia</h3>
+      <p>Mendampingi lansia dengan perhatian dan empati.</p>
 
-  <strong>Syarat:</strong>
-  <ul>
-    <li>Usia 20–45 tahun</li>
-    <li>Sabar, sopan, dan telaten</li>
-    <li>Sehat jasmani</li>
-  </ul>
+      <strong>Tugas:</strong>
+      <ul>
+        <li>Pendamping aktivitas harian</li>
+        <li>Membantu kebutuhan dasar lansia</li>
+        <li>Menjadi teman bicara</li>
+      </ul>
 
-  <div class="apply-box">
-    <a class="btn-primary" target="_blank"
-       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
-       Lamar via WhatsApp
-    </a>
+      <strong>Syarat:</strong>
+      <ul>
+        <li>Usia 20–45 tahun</li>
+        <li>Sabar, sopan, dan telaten</li>
+        <li>Sehat jasmani</li>
+      </ul>
 
-    <a class="btn-secondary" target="_blank"
-       href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
-       Lamar via Email
-    </a>
-  </div>
-</div>
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
+          Lamar via WhatsApp
+        </a>
 
-    <!-- Driver -->
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
+          Lamar via Email
+        </a>
+      </div>
+    </div>
+
+    <!-- Pengemudi Pribadi -->
     <div class="card">
       <h3>Pengemudi Pribadi</h3>
       <p>Mengemudi dengan aman, sopan, dan profesional.</p>
@@ -144,12 +146,12 @@
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Driver">
-           Lamar via WhatsApp
+          Lamar via WhatsApp
         </a>
 
         <a class="btn-secondary" target="_blank"
            href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pengemudi%20Pribadi">
-           Lamar via Email
+          Lamar via Email
         </a>
       </div>
     </div>
@@ -175,174 +177,43 @@
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">
-           Lamar via WhatsApp
+          Lamar via WhatsApp
         </a>
 
         <a class="btn-secondary" target="_blank"
            href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Penjaga%20Toko">
-           Lamar via Email
+          Lamar via Email
         </a>
       </div>
     </div>
 
-    <!-- =========================================================
-         TAMBAHAN 5 LAYANAN BARU (sesuai instruksi)
-    ========================================================== -->
-
-    <!-- Jasa Umum -->
+    <!-- AutoCAD Drafter -->
     <div class="card">
-      <h3>Layanan Jasa Umum (Segera Hadir)</h3>
-      <p>Pekerjaan umum harian sesuai kebutuhan pelanggan.</p>
+      <img src="/loker-autocad-drafter.png" class="card-image"
+           alt="Lowongan AutoCAD Drafter Assistenku">
+
+      <h3>AutoCAD Drafter (Junior – Intermediate – Expert)</h3>
+
+      <p>
+        Kesempatan bagi Fresh Graduate maupun profesional untuk bergabung
+        melalui proyek nyata dan berkelanjutan bersama Assistenku.
+      </p>
 
       <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Info%20Layanan%20Jasa%20Umum">
-           Chat via WhatsApp
+        <a class="btn-primary" href="/loker-autocad-drafter.html">
+          Lihat Detail Lowongan
         </a>
 
         <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Info%20Layanan%20Jasa%20Umum">
-           Email
+           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20AutoCAD%20Drafter">
+          Lamar via WhatsApp
         </a>
       </div>
     </div>
-
-    <!-- Cleaning Service -->
-    <div class="card">
-      <h3>Cleaning Service</h3>
-      <p>Kebersihan rumah, kantor, kos, dan area lainnya.</p>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Info%20Cleaning%20Service">
-           Chat via WhatsApp
-        </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Info%20Cleaning%20Service">
-           Email
-        </a>
-      </div>
-    </div>
-
-    <!-- Kirim Barang & Jastip -->
-    <div class="card">
-      <h3>Kirim Barang & Jastip (Segera Hadir)</h3>
-      <p>Layanan pengiriman cepat dan jasa titip.</p>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Info%20Kirim%20Barang%20dan%20Jastip">
-           Chat via WhatsApp
-        </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Info%20Kirim%20Barang%20dan%20Jastip">
-           Email
-        </a>
-      </div>
-    </div>
-
-    <!-- Service & Perbaikan -->
-    <div class="card">
-      <h3>Service & Perbaikan (Segera Hadir)</h3>
-      <p>Perbaikan ringan rumah & peralatan.</p>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Info%20Service%20dan%20Perbaikan">
-           Chat via WhatsApp
-        </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Info%20Service%20dan%20Perbaikan">
-           Email
-        </a>
-      </div>
-    </div>
-
-    <!-- Transportasi -->
-    <div class="card">
-      <h3>Transportasi (Segera Hadir)</h3>
-      <p>Layanan transportasi aman, nyaman, dan profesional.</p>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628986570020?text=Info%20Transportasi">
-           Chat via WhatsApp
-        </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Info%20Transportasi">
-           Email
-        </a>
-      </div>
-    </div>
-
-   <!-- AutoCAD Drafter -->
-<div class="card">
-
-  <!-- Gambar Loker -->
-  <img
-    src="/loker-autocad-drafter.png"
-    alt="Lowongan AutoCAD Drafter Assistenku"
-    class="card-image"
-  >
-
-  <h3>AutoCAD Drafter (Junior – Intermediate – Expert)</h3>
-
-  <p>
-    Kesempatan bagi Fresh Graduate maupun profesional untuk bergabung
-    melalui proyek nyata dan berkelanjutan bersama Assistenku.
-  </p>
-
-  <strong>Target Kandidat:</strong>
-  <ul>
-    <li>Fresh Graduate yang ingin membangun pengalaman & portofolio</li>
-    <li>Berpengalaman AutoCAD atau software setara</li>
-  </ul>
-
-  <strong>Deskripsi Pekerjaan:</strong>
-  <ul>
-    <li>Membuat dan merapikan gambar kerja teknis</li>
-    <li>Redraw dari sketsa / brief proyek</li>
-    <li>Revisi sesuai arahan klien</li>
-    <li>Menjaga skala & standar gambar</li>
-    <li>Koordinasi dengan tim Assistenku</li>
-  </ul>
-
-  <strong>Kualifikasi:</strong>
-  <ul>
-    <li>Menguasai AutoCAD 2D atau setara</li>
-    <li>Memahami dasar gambar teknik</li>
-    <li>Bertanggung jawab & komunikatif</li>
-    <li>Siap kerja remote</li>
-    <li>Memiliki laptop pribadi</li>
-  </ul>
-
-  <p><i>Fee negotiable sesuai kompleksitas dan performa.</i></p>
-
-  <div class="apply-box">
-    <a class="btn-primary" href="/loker-autocad-drafter.html">
-      Lihat Detail Lowongan
-    </a>
-
-    <a class="btn-secondary" target="_blank"
-       href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20AutoCAD%20Drafter">
-      Lamar via WhatsApp
-    </a>
-
-    <a class="btn-secondary" target="_blank"
-       href="mailto:karirassistenku@gmail.com?subject=AutoCAD%20Drafter%20-%20Nama">
-      Lamar via Email
-    </a>
-  </div>
-
-</div>
-
 
   </div>
-</section>
+  </section>
+
 
 <footer>© 2025 Assistenku</footer>
 <script src="/script.js"></script>
