--- a/karir.html
+++ b/karir.html
@@ -206,11 +206,11 @@
         </a>
 
         <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20autoCAD%20Drafter%20-%20Junior">
           Lamar via Email
         </a>
 
-        <a class="btn-outline" href="loker-art.html">
+        <a class="btn-outline" href="loker-autocad-drafter.html">
           Lihat Detail Lowongan
         </a>
       </div>
