--- a/loker-art.html
+++ b/loker-art.html
@@ -56,6 +56,44 @@
       color: #555;
       margin-top: 15px;
     }
+    .fee-section {
+  margin-top: 30px;
+}
+
+.fee-section h2 {
+  margin-bottom: 15px;
+}
+
+.fee-card {
+  background: #ffffff;
+  border-radius: 6px;
+  border: 1px solid #e3e8f0;
+  padding: 20px;
+}
+
+.fee-card h3 {
+  margin-top: 0;
+  color: #0b5ed7;
+}
+
+.fee-box {
+  background: #f0f6ff;
+  border-left: 5px solid #0b5ed7;
+  padding: 15px;
+  margin: 15px 0;
+}
+
+.fee-box p {
+  margin: 6px 0;
+}
+
+.fee-note {
+  background: #fff7e6;
+  border-left: 5px solid #f0ad4e;
+  padding: 12px;
+  font-size: 0.9em;
+  color: #555;
+}
     .apply-section {
   background: #0b3a63;
   color: #fff;
@@ -182,6 +220,30 @@
     </ul>
   </div>
 
+<!-- Fee & Ketentuan -->
+<div class="fee-section">
+  <h2>Fee & Ketentuan</h2>
+
+  <div class="fee-card">
+    <h3>Assisten Rumah Tangga</h3>
+
+    <div class="fee-box">
+      <p>
+        Gaji disesuaikan dengan estimasi pada bagian sebelumnya.<br>
+        Pembayaran sudah termasuk biaya layanan Assistenku.
+      </p>
+      <p>
+        Biaya layanan Assistenku sebesar <strong>15% – 20%</strong>
+        dan yang diterima pekerja senilai <strong>80% - 85%</strong>.
+      </p>
+    </div>
+
+    <div class="fee-note">
+      Nilai kerja disesuaikan dengan evaluasi performa.
+    </div>
+  </div>
+</div>
+  
   <div class="box">
     <strong>Fasilitas (Jika Menginap):</strong>
     <ul>
@@ -192,9 +254,6 @@
     </ul>
   </div>
 
-  <p class="note">
-    Catatan: Gaji menyesuaikan tugas dan jam kerja. Tidak ada biaya pendaftaran.
-  </p>
 
 <!-- Cara Melamar -->
 <section class="apply-section">
